<resources>
    <string name="Booking_settings_save_and_exit">Save &amp; Exit</string>
    <string name="Message_to_guest">Message to a Guest</string>
    <string name="Message_to_host">Message to a Host</string>
    <string name="Property_type">Property Type:</string>
    <string name="_0_label">0+</string>
    <string name="_1_label">1+</string>
    <string name="_24_hours_request_label">24 hours Request</string>
    <string name="_2_label">2+</string>
    <string name="_3_label">3+</string>
    <string name="_4_label">4+</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_property">About Property</string>
    <string name="about_property_description">Name your property, add photographs,specify area and describe your place.</string>
    <string name="about_your_property">Description of Property</string>
    <string name="addYourProperty_basic_information">Basic Information</string>
    <string name="addYourProperty_confirmation">Confirmation</string>
    <string name="addYourProperty_description_of_property">Description of Property</string>
    <string name="addYourProperty_desription_property_desc">Set the rules, post the best pictures and describe the scene to guests.</string>
    <string name="addYourProperty_ok">OK</string>
    <string name="addYourProperty_priceSetting">Price Setting</string>
    <string name="addYourProperty_priceSetting_desc">Set prices, availability and booking setting.</string>
    <string name="addYourProperty_sure_to_unpublish">Are you sure to Unpublish your property?</string>
    <string name="addYourProperty_txt">Add Your Property</string>
    <string name="addYourProperty_unpublish">UNPUBLISH</string>
    <string name="addYourProperty_unpublish_success">Property unpublished successfully</string>
    <string name="add_additional_rule">Add Additional Rules</string>
    <string name="add_coupoun">add</string>
    <string name="add_image_cancel">Cancel</string>
    <string name="add_your_property_basic_info_label">Basic Information</string>
    <string name="add_your_property_basic_info_summary_label">Few questions about type of property, rooms, bath, and amenities.</string>
    <string name="add_your_property_description_of_property_label">Description of Property</string>
    <string name="add_your_property_description_of_property_summary_label">Set the rules, post best pictures, and describe the scene to guests.</string>
    <string name="add_your_property_label">Add your Property</string>
    <string name="add_your_property_price_setting_label">Price Setting</string>
    <string name="add_your_property_price_setting_summary_label">Set prices, availability, and booking setting.</string>
    <string name="add_your_property_unpublish_property_label">UNPUBLISH</string>
    <string name="add_your_rule">Additional Rules</string>
    <string name="additional_rule_message">Use comma(,) to separate each rule</string>
    <string name="addproperty_reviewPublishProperty">Review &amp; Publish Property</string>
    <string name="alert">Alert</string>
    <string name="all_data_reset">All data Resetted</string>
    <string name="all_details_mandatory">All Details are Mandatory to book a property. Your ID will not be shared with any unauthorized person.</string>
    <string name="allow_loc_permission">Allow Jelsat to access your location </string>
    <string name="amenities">Amenities</string>
    <string name="amenities_desc">Select the amenities that are available for guests</string>
    <string name="amenities_label">Amenities</string>
    <string name="amenities_next">next</string>
    <string name="amenities_save_and_exit">Save &amp; Exit</string>
    <string name="app_name">Jelsat</string>
    <string name="app_version">Version</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_coupoun">apply</string>
    <string name="apply_filter_label">Apply Filter</string>
    <string name="applying_coupoun">Applying coupon. Please wait…</string>
    <string name="are_you_sure_to_logout">Do you want to logout?</string>
    <string name="are_you_sure_to_upload">Are you sure to upload again?</string>
    <string name="are_you_sure_want_to_delete_saved_card">Are you sure you want to delete saved card?</string>
    <string name="areaOfProperty">Area (sqm)(optional)</string>
    <string name="atleast_price_label">Price must be greater than 0</string>
    <string name="bank_details_button_add">Add</string>
    <string name="bank_details_button_update">Update</string>
    <string name="bank_details_hint_bank_holder_name">Account Holder Name</string>
    <string name="bank_details_hint_bank_name">Bank Name</string>
    <string name="bank_details_hint_country">Country</string>
    <string name="bank_details_hint_iban">IBAN</string>
    <string name="bank_details_info1">Please provide your personal/corporate bank account details. Make sure all details filled and correct.</string>
    <string name="bank_details_updated">Your bank details updated successfully</string>
    <string name="bankdetails_label">Bank Details</string>
    <string name="basic_information_description">Few questions about type of property, rooms, bath and amenities.</string>
    <string name="bath_rooms_text">Count bathrooms that just have a toilet and a sink as .5</string>
    <string name="bathrooms">Bathroom(s)</string>
    <string name="become_host">Become Host</string>
    <string name="become_host_close">Close</string>
    <string name="become_host_data_1">In the rare event of accidental damage, the property of every jelsat host is covered up to a 500,000 SAR. It’s peace of mind at no extra charge.</string>
    <string name="become_host_data_2">All Jelsat users must verify their phone and email. The host may require a government ID. Guest and host each publish reviews after check out keeping everyone accountable and respectful.</string>
    <string name="become_host_data_3">It’s free and easy to add your property to Jelsat. Describe your space, how many guests you can accommodate, and add photos and details. It’s free and easy to add your property to Jelsat. Describe your space, how many guests you can accommodate, and add photos and details.</string>
    <string name="become_host_data_4">With Jelsat you’re in full control of your availability, prices, and house rules. You can set check-in times and manage the details however you like.</string>
    <string name="become_host_data_5">Jelsat secure payments system means you never have to deal with money directly. Guests are charged before arrival, and you are paid automatically after check-in, minus a 3% service fee. You can be paid via direct deposit to your checking account.</string>
    <string name="become_host_heading_1">Safety on Jelsat</string>
    <string name="become_host_heading_2">Trust</string>
    <string name="become_host_heading_3">Add your property</string>
    <string name="become_host_heading_4">Manage your proerty</string>
    <string name="become_host_heading_5">Get Paid</string>
    <string name="bed_room_label">Bedroom(s)</string>
    <string name="beds">Bed(s)</string>
    <string name="beds_label">Beds</string>
    <string name="bill_details">Detailed Bill</string>
    <string name="bill_details_cleaning_fee">Cleaning fee</string>
    <string name="cancel_label">Cancel</string>
    <string name="choose_country_code_label">Choose Country Code</string>
    <string name="dashboard_bookings">BOOKINGS</string>
    <string name="dashboard_home">HOME</string>
    <string name="dashboard_inbox">INBOX</string>
    <string name="dashboard_listing">LISTING</string>
    <string name="dashboard_payments">PAYMENTS</string>
    <string name="dashboard_profile">PROFILE</string>
    <string name="dashboard_saved">SAVED</string>
    <string name="describe_the_place_decor">Describe the place, decor, lights and what’s nearby(Minimum 50 characters and Maximum is 250 characters ).</string>
    <string name="describe_your_property">Describe your property</string>
    <string name="edit_profile_choose_language">Choose Languages</string>
    <string name="no_result_found">Results not found</string>
    <string name="profile_guest_feedback">Feedback</string>
    <string name="profile_guest_help">Help</string>
    <string name="profile_guest_invite">Invite</string>
    <string name="profile_guest_settings">Settings</string>
    <string name="profile_guest_wallet">Wallet</string>
    <string name="profile_host_addproperty">Add Property</string>
    <string name="profile_host_bankdetails">Bank Details</string>
    <string name="profile_host_calendar">Calendar</string>
    <string name="profile_host_feedback">Feedback</string>
    <string name="profile_host_help">Help</string>
    <string name="profile_host_invite">Invite</string>
    <string name="profile_host_settings">Settings</string>
    <string name="property_images">Property Images</string>
    <string name="property_name">Property Name</string>
    <string name="save_and_exit">Save &amp; Exit</string>
    <string name="settings_Privacy_policy_label">Privacy Policy</string>
    <string name="settings_about_label">About</string>
    <string name="settings_change_password_label">Change Password</string>
    <string name="settings_host_guide_label">Guide</string>
    <string name="settings_language_label">Language</string>
    <string name="settings_logout_label">LOG OUT</string>
    <string name="settings_terms_label">Terms of Use</string>
    <string name="submit">SUBMIT</string>
    <string name="support_email">email us at </string>
    <string name="support_email_link">support@jelsat.com</string>
    <string name="support_hint">Write here what is on your mind</string>
    <string name="support_or">(or)</string>
    <string name="support_send">SEND</string>
    <string name="type_country_name_label">Type country name</string>
</resources>