<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/view_addproperty" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" app:textViewLeftDrawable="@drawable/ic_add_property" app:titleText="@string/profile_host_addproperty"/>
    <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/view_calender" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" app:textViewLeftDrawable="@drawable/ic_clendar" app:titleText="@string/profile_host_calendar"/>
    <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/view_bankdetails" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" app:textViewLeftDrawable="@drawable/ic_bank_details" app:titleText="@string/profile_host_bankdetails"/>
    <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/view_settings" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" app:textViewLeftDrawable="@drawable/ic_settings" app:titleText="@string/profile_host_settings"/>
    <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/view_feedback" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" app:textViewLeftDrawable="@drawable/ic_feedback" app:titleText="@string/profile_host_feedback"/>
    <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/help_view_host" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" app:textViewLeftDrawable="@drawable/ic_faqs" app:titleText="@string/profile_host_help"/>
    <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/host_invite_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" app:textViewLeftDrawable="@drawable/ic_invite" app:titleText="@string/profile_host_invite"/>
</LinearLayout>
