<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <include android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/custom_toolbar"/>
        <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/language_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginRight="6dp" android:layout_marginBottom="6dp" app:languageIsVisible="true" app:languageText="English" app:titleText="@string/settings_language_label"/>
        <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/about_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" app:titleText="@string/settings_about_label"/>
        <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/privacy_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" app:titleText="@string/settings_Privacy_policy_label"/>
        <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/Terms_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" app:titleText="@string/settings_terms_label"/>
        <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/changePassword_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" app:titleText="@string/settings_change_password_label"/>
        <com.jelsat.compoundviews.ProfileCompoundView android:id="@+id/hostguide_view" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" app:titleText="@string/settings_host_guide_label"/>
    </LinearLayout>
    <TextView android:gravity="center" android:id="@+id/versionnumber" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:text="TextView" android:layout_above="@+id/logout_button" android:layout_alignParentBottom="false"/>
    <com.jelsat.widgets.FancyButton android:textSize="18sp" android:id="@+id/logout_button" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" app:fb_defaultColor="@color/white" app:fb_focusColor="#ff838b" app:fb_iconPaddingRight="5dp" app:fb_iconPosition="1" app:fb_iconResource="@drawable/ic_power_settings_new_black_24dp" app:fb_radius="4dp" app:fb_text="@string/settings_logout_label" app:fb_textAllCaps="true" app:fb_textColor="@color/normal_text_color" app:fb_textFont="sf_ui_display_semibold.otf"/>
    <View android:background="@color/grey" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_above="@+id/logout_button"/>
</RelativeLayout>
