<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/toolbar" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/custom_toolbar"/>
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="35dp" android:layout_marginRight="10dp" android:layout_marginBottom="30dp">
        <TextView android:textSize="15sp" android:textColor="@color/normal_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/support_email" android:fontFamily="@font/sf_ui_display_regular"/>
        <TextView android:textSize="15sp" android:textColor="@color/app_background" android:id="@+id/click_support_mail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/support_email_link" android:fontFamily="@font/sf_ui_display_regular"/>
    </LinearLayout>
    <TextView android:textSize="12sp" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="30dp" android:text="@string/support_or" android:fontFamily="@font/sf_ui_display_regular"/>
    <EditText android:textSize="15sp" android:gravity="top" android:id="@+id/et_message" android:background="@drawable/rectangle" android:padding="12dp" android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="12dp" android:hint="@string/support_hint" android:layout_weight="0.8" android:inputType="textMultiLine" android:imeOptions="actionDone" android:fontFamily="@font/sf_ui_display_regular"/>
    <Space android:layout_width="match_parent" android:layout_height="50dp" android:layout_weight="0.1"/>
    <com.jelsat.widgets.FancyButton android:gravity="center" android:id="@+id/btn_send" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:textAllCaps="true" app:fb_defaultColor="@color/app_background" app:fb_radius="3dp" app:fb_text="@string/support_send" app:fb_textColor="@color/white" app:fb_textFont="sf_ui_display_bold.otf" app:fb_textSize="20sp" style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>
