<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="12dp">
    <Button android:textSize="20sp" android:textColor="@color/white" android:id="@+id/btn_submit" android:background="@drawable/button_selected_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="12dp" android:text="@string/submit" android:layout_alignParentBottom="true" android:fontFamily="@font/sf_ui_display_medium" style="?android:attr/borderlessButtonStyle"/>
    <LinearLayout android:orientation="vertical" android:padding="12dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/btn_submit">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20sp" android:textColor="@color/property_heading_color" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/edit_profile_choose_language" android:layout_weight="1"/>
            <TextView android:textSize="16sp" android:textColor="@color/normal_text_color" android:id="@+id/cancel_TV" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:text="@string/cancel_label"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView android:id="@+id/lanuguages_recyclerview" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView android:textColor="@android:color/primary_text_light" android:id="@+id/textView_noresult" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/no_result_found" android:layout_centerInParent="true"/>
</RelativeLayout>
