<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/back_layout" android:layout_width="match_parent" android:layout_height="?android:attr/actionBarSize">
        <ImageView android:id="@+id/back_arrow_property" android:padding="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_arrow_back_black_24dp"/>
        <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <TextView android:textSize="16sp" android:textColor="@color/normal_text_color" android:id="@+id/saveAndExit" android:padding="12dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp" android:text="@string/save_and_exit"/>
    </LinearLayout>
    <Button android:textSize="22sp" android:textColor="@color/white" android:id="@+id/next_button" android:background="@drawable/button_backgound" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="20dp" android:text="@string/amenities_next" android:layout_alignParentBottom="true" android:fontFamily="@font/sf_ui_display_bold" style="?android:attr/borderlessButtonStyle"/>
    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/next_button" android:layout_below="@+id/back_layout">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="16dp" android:layout_marginRight="16dp">
            <TextView android:textSize="30sp" android:textColor="@color/property_heading_color" android:gravity="start" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_your_property" android:fontFamily="@font/sf_ui_display_regular"/>
            <TextView android:textSize="15sp" android:textColor="@color/property_heading_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_property_description" android:lineSpacingExtra="3dp" android:fontFamily="@font/sf_ui_display_regular"/>
            <android.support.design.widget.TextInputLayout android:textColorHint="@color/app_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="25dp">
                <EditText android:textSize="16sp" android:textColor="@color/normal_text_color" android:gravity="start" android:layout_gravity="start" android:id="@+id/property_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/property_name" android:maxLines="1" android:maxLength="60" android:inputType="text" android:fontFamily="@font/sf_ui_display_regular"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:textColorHint="@color/app_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="45dp">
                <com.jelsat.customclasses.CustomEditText android:textSize="16sp" android:textColor="@color/normal_text_color" android:gravity="start" android:id="@+id/property_images_ed" android:focusable="false" android:longClickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/property_images" android:cursorVisible="false" android:maxLines="1" android:inputType="none" android:fontFamily="@font/sf_ui_display_regular" app:drawableRightCompat="@drawable/ic_attach"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:textColorHint="@color/app_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="45dp">
                <EditText android:textSize="16sp" android:textColor="@color/normal_text_color" android:id="@+id/areaOfPropertyEd" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/areaOfProperty" android:maxLines="1" android:maxLength="9" android:inputType="number" android:fontFamily="@font/sf_ui_display_regular"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginTop="45dp">
                <TextView android:textColor="@color/app_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/describe_your_property" android:fontFamily="@font/sf_ui_display_regular"/>
                <EditText android:scrollbarStyle="insideInset" android:textSize="16sp" android:textColor="@color/normal_text_color" android:gravity="start" android:id="@+id/about_property_ed" android:background="@android:color/transparent" android:paddingLeft="4dp" android:paddingTop="4dp" android:paddingRight="0dp" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginBottom="12dp" android:hint="@string/describe_the_place_decor" android:maxLines="8" android:lines="6" android:minLines="4" android:maxLength="250" android:lineSpacingExtra="2dp" android:inputType="textMultiLine" android:imeOptions="actionDone" android:overScrollMode="always" android:fontFamily="@font/sf_ui_display_regular"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
