<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="12dp">
    <LinearLayout android:orientation="vertical" android:padding="12dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20sp" android:textColor="@color/property_heading_color" android:gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_country_code_label"/>
            <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            <TextView android:textSize="16sp" android:textColor="@color/normal_text_color" android:id="@+id/cancel_TV" android:padding="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_label"/>
        </LinearLayout>
        <com.jelsat.customclasses.CustomEditText android:gravity="start" android:id="@+id/country_search_edittext" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_marginBottom="12dp" android:hint="@string/type_country_name_label" android:maxLines="1" android:drawablePadding="12dp" android:inputType="text" app:drawableLeftCompat="@drawable/ic_search_24dp"/>
        <android.support.v7.widget.RecyclerView android:id="@+id/country_code_recyclerview" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView android:textColor="@android:color/primary_text_light" android:id="@+id/textView_noresult" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/no_result_found" android:layout_centerInParent="true"/>
</RelativeLayout>
